--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 
     <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="description" content="React eCommerce Admin Dashboard" />
-    <meta
-      property="og:title"
-      content="Kachabazar - React eCommerce Admin Dashboard"
-    />
-    <meta property="og:type" content="eCommerce Website" />
-    <meta property="og:url" content="https://kachabazar-admin.vercel.app" />
+    <meta property="og:title" content="Diamdus" />
+    <meta property="og:type" content="Diamond commerce" />
+    <meta property="og:url" content="https://www.diamdus.com/" />
     <meta
       property="og:image"
       content="https://res.cloudinary.com/ahossain/image/upload/v1636572997/kachabazar-admin_ijlexj.png"
@@ -25,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Kachabazar | React Admin Dashboard</title>
+    <title>Diamdus | Vendor Dashboard</title>
   </head>
   <body class="antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
