--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="apple-touch-icon" href="/favicon.png" />
-    <meta name="description" content="React eCommerce Admin Dashboard" />
+    <meta name="description" content="Diamond eCommerce Admin Dashboard" />
     <meta property="og:title" content="Diamdus" />
     <meta property="og:type" content="Diamond commerce" />
     <meta property="og:url" content="https://www.diamdus.com/" />
